Add multi-channel support

--- a/data/index.html
+++ b/data/index.html
@@ -36,7 +36,7 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
     /* button control */
 
     .button {
-        padding: 10px 15px;
+        padding: 0 1%;
         font-size: 22px;
         text-align: center;
         cursor: pointer;
@@ -47,7 +47,7 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         box-shadow: 1px 1px #ccc;
         position: relative;
         top: 0px;
-        height: 42px
+        height: 30px
     }
 
     button:disabled {
@@ -86,19 +86,95 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         transform: translateY(3px)
     }
 
-    /* red button */
+    .toggle {
+        --width: 80px;
+        --height: calc(var(--width) / 3);
 
-    .button3 {
-        background-color: red
+        position: relative;
+        display: inline-block;
+        width: var(--width);
+        height: var(--height);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+        border-radius: var(--height);
+        cursor: pointer;
     }
 
-    .button3:hover {
-        background-color: darkred
+    .toggle input {
+        display: none;
     }
 
-    .button3:active {
-        background-color: darkred;
-        transform: translateY(3px)
+    .toggle .slider {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: var(--height);
+        background-color: #ccc;
+        transition: all 0.4s ease-in-out;
+    }
+
+    .toggle .slider::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(var(--height));
+        height: calc(var(--height));
+        border-radius: calc(var(--height) / 2);
+        background-color: #fff;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+        transition: all 0.4s ease-in-out;
+    }
+
+    .toggle input:checked+.slider {
+        background-color: #f37521;
+    }
+
+    .toggle input:checked+.slider::before {
+        transform: translateX(calc(var(--width) - var(--height)));
+    }
+
+    .toggle .labels {
+        position: absolute;
+        top: 5px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 14px;
+        font-family: sans-serif;
+        transition: all 0.4s ease-in-out;
+        overflow: hidden;
+    }
+
+    .toggle .labels::after {
+        content: attr(data-off);
+        position: absolute;
+        right: 5px;
+        color: #4d4d4d;
+        opacity: 1;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+        transition: all 0.4s ease-in-out;
+    }
+
+    .toggle .labels::before {
+        content: attr(data-on);
+        position: absolute;
+        left: calc(var(--height) - var(--width) + 2px);
+        color: #ffffff;
+        opacity: 0;
+        text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.4);
+        transition: all 0.4s ease-in-out;
+    }
+
+    .toggle input:checked~.labels::after {
+        opacity: 0;
+        transform: translateX(calc(var(--width) - var(--height)));
+    }
+
+    .toggle input:checked~.labels::before {
+        opacity: 1;
+        transform: translateX(calc(var(--width) - var(--height)));
     }
 
     .chart {
@@ -106,16 +182,43 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         height: auto;
         margin: auto;
     }
+
+    select {
+        font-size: 22px;
+        border-radius: 10px;
+        margin-top: 5px;
+    }
+
+    .inner-select-wrapper {
+        position: absolute;
+        z-index: 1;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        padding: 5px;
+    }
+
+    .option-wrapper {
+        position: relative;
+    }
+
+    .option-wrapper:hover {
+        cursor: pointer;
+        background-color: #f2f2f2;
+    }
+
+    #channel_count {
+        text-align: center;
+    }
 </style>
 <html>
 
 <head>
-    <link rel='shortcut icon' type='image/x-icon' sizes='192x192' href='/android-192-osc.png'>
-    <link rel='icon' type='image/png' sizes='192x192' href='/android-192-osc.png'>
-    <link rel='apple-touch-icon' sizes='180x180' href='/apple-180-osc.png'>
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.2/chart.min.js"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <title>Esp32_oscilloscope</title>
 </head>
@@ -133,29 +236,119 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         </div>
     </div>
 
+    <label class="toggle">
+        <input type="checkbox" onclick="toggle(this)">
+        <span class="slider"></span>
+        <span class="labels" data-on="ON" data-off="OFF"></span>
+    </label>
+
+
+    <p>
+        <select id="channel_count" onclick="showOption()">
+            <option value="0">No. of Channels</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
 
 
 
-    <div class='d3'><button class='button button2' id='startButton' onclick="
-    enableDisableControls (true);
-    startOscilloscope ();
-  ">&nbsp;START&nbsp;</button></div>
-    <div class='d5'><button class='button button3' id='stopButton' disabled onclick="
-    enableDisableControls (false);
-    stopOscilloscope ();
-  ">&nbsp;STOP&nbsp;</button></div>
-    </div>
+        <button class='button button1' onclick="
+        stopOscilloscope ();
+        save_csv();
+        ">&nbsp;Save&nbsp;</button>
+
+
+    </p>
 
     <script>
+
+        function showOption() {
+
+            if ($(".select_list_gpio")[0]) {
+                $(".select_list_gpio").remove();
+            }
+            if ($(".select_list_rate")[0]) {
+                $(".select_list_rate").remove();
+            }
+
+            var parent = document.body;
+            gpio_text = ["GPIO 32", "GPIO 33", "GPIO 34", "GPIO 35", "GPIO 36", "GPIO 37", "GPIO 38", "GPIO 39"];
+            gpio_value = ['4', '5', '6', '7', '0', '1', '2', '3'];
+            rate_text = ["100 Hz", "200 Hz", "300 Hz", "400 Hz", "500 Hz"];
+            rate_value = ["100", "200", "300", "400", "500"]
+
+            for (var i = 0; i < $("#channel_count").val(); i++) {
+                var subparent = document.createElement('p');
+
+                var select_list_gpio = document.createElement("select");
+                select_list_gpio.setAttribute("class", "select_list_gpio");
+                var select_list_rate = document.createElement("select");
+                select_list_rate.setAttribute("class", "select_list_rate");
+
+                for (var j = 0; j < gpio_text.length; j++) {
+                    option = document.createElement("option");
+                    option.value = gpio_value[j];
+                    option.text = gpio_text[j];
+                    select_list_gpio.appendChild(option);
+                }
+
+                for (var j = 0; j < rate_text.length; j++) {
+                    option = document.createElement("option");
+                    option.value = rate_value[j];
+                    option.text = rate_text[j];
+                    select_list_rate.appendChild(option);
+                }
+                subparent.appendChild(select_list_gpio);
+                subparent.appendChild(select_list_rate);
+
+                parent.appendChild(subparent);
+            }
+
+        }
+
+        function toggle(checkbox) {
+            if (checkbox.checked) {
+                startOscilloscope();
+            }
+            else {
+                stopOscilloscope();
+            }
+        }
 
         var debug = false;
         var data = {
             labels: [0],
             datasets: [{
-                label: 'Real-time Data',
+                label: 'Channel_1',
                 data: [],
-                borderColor: '#e67e22',
-                backgroundColor: '#2ecc71',
+                borderColor: '#00CCFF',
+                backgroundColor: '#00CCFF',
+                borderWidth: 1,
+                pointRadius: 0,
+            },
+            {
+                label: 'Channel_2',
+                data: [],
+                borderColor: '#e06666',
+                backgroundColor: '#e06666',
+                borderWidth: 1,
+                pointRadius: 0,
+            },
+            {
+                label: 'Channel_3',
+                data: [],
+                borderColor: '#6aa84f',
+                backgroundColor: '#6aa84f',
+                borderWidth: 1,
+                pointRadius: 0,
+            },
+            {
+                label: 'Channel_4',
+                data: [],
+                borderColor: '#F1C232',
+                backgroundColor: '#F1C232',
                 borderWidth: 1,
                 pointRadius: 0,
             }]
@@ -175,7 +368,6 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                             font: {
                                 family: 'Roboto',
                                 size: 20,
-                                // weight: 'bold',
                                 lineHeight: 1.2,
                             },
                             padding: { top: 20, left: 0, right: 0, bottom: 0 }
@@ -192,7 +384,6 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                             font: {
                                 family: 'Roboto',
                                 size: 20,
-                                // weight: 'bold',
                                 lineHeight: 1.2,
                             },
                             padding: { top: 10, left: 0, right: 0, bottom: 0 }
@@ -218,55 +409,92 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
 
         function stopOscilloscope() {
             if (webSocket != null) {
-                webSocket.send('stop');
                 webSocket.close();
                 webSocket = null;
             }
         }
 
-        var value = 0;
-        var time = 0;
-        var test = "0";
-
+        var csvFileData = 'Channel, Time, Analog, Packet No.\n';
         function startOscilloscope() {
             stopOscilloscope();
-            webSocket = new WebSocket("ws://" + window.location.hostname + ":81/");
-            var start_t = Date.now();
+
+            var pin = [];
+            var i = 0;
+            $(".select_list_gpio").each(function () {
+                pin[i] = $(this).val();
+                i++;
+            });
             
-            webSocket.onmessage = function(event){
+            var rate = [];
+            i = 0;
+            $(".select_list_rate").each(function () {
+                rate[i] = $(this).val();
+                i++;
+            });
+            webSocket = new WebSocket("ws://" + window.location.hostname + ":81/");
+            webSocket.addEventListener("open", (event) => {
+
+                for (var i = 0; i < $("#channel_count").val(); i++) {
+                    msg = rate[i] + pin[i];
+                    webSocket.send(msg);
+                }
+            })
+
+            start_t = Date.now();
+            webSocket.onmessage = function (event) {
                 JSONobj = JSON.parse(event.data);
+                channel_count = JSONobj.channel_count;
+                ADC = JSONobj.ADC;
+                packet_count = JSONobj.packet_count;
+
+
+                if (data.labels.length > 1000) {
+                    data.labels.pop();
+                }
+                if (data.datasets[channel_count].data.length > 1000) {
+                    data.datasets[channel_count].data.pop();
+                }
+                data.datasets[channel_count].data.unshift(ADC);
 
                 current_t = Date.now();
-                time = parseInt((parseInt(current_t) - parseInt(start_t)) / 1000);
-
-                value = parseInt(JSONobj.ADC1);
-                test = (JSONobj.ADC2);
-                if(debug){console.log(test);}
-
-                if (data.datasets[0].data.length > 1000  ) {
-                    data.labels.pop();
-                    data.datasets[0].data.pop();
-                }
+                time = parseInt(current_t) - parseInt(start_t)
                 data.labels.unshift(time);
-                data.datasets[0].data.unshift(value);
+
+                csvFileData += channel_count + "," + time + "," + ADC + "," + packet_count + "\n";
             };
-            
-        }
-        window.setInterval(callback, 1);
-        function callback()
-        {
-            chart.update();
+
+
+            window.setInterval(callback, 30);
+            function callback() {
+                chart.update();
+            }
+
         }
 
+
+
+        function save_csv() {
+
+            var hiddenElement = document.createElement('a');
+            hiddenElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csvFileData);
+            hiddenElement.target = '_blank';
+
+            //provide the name for the CSV file to be downloaded
+            hiddenElement.download = 'chart.csv';
+            hiddenElement.click();
+
+        }
         function enableDisableControls(workMode) {
             if (workMode) {
                 // disable GPIO, analog/digital, trigger, frequency and start, enable stop
                 document.getElementById('startButton').disabled = true;
                 document.getElementById('stopButton').disabled = false;
+                document.getElementById('sampling_rate').disabled = false;
             } else {
                 // enable GPIO, analog/digital, trigger, frequency and start, disable stop
                 document.getElementById('startButton').disabled = false;
                 document.getElementById('stopButton').disabled = true;
+                document.getElementById('sampling_rate').disabled = true;
             }
         }
     </script>
