Update copyright certificate

--- a/data/index.html
+++ b/data/index.html
@@ -2,12 +2,12 @@
 https://github.com/upsidedownlabs/BioSignal-Recorder
 
 Copyright (c) 2023 Mahesh Tupe tupemahesh91@gmail.com
-
+Copyright (c) 2021 Moteen Shah moteenshah.02@gmail.com
 
 Upside Down Labs invests time and resources providing this open source code,
 please support Upside Down Labs and open-source hardware by purchasing
 products from Upside Down Labs!
-Copyright (c) 2023 Upside Down Labs - contact@upsidedownlabs.tech
+Copyright (c) 2021 Upside Down Labs - contact@upsidedownlabs.tech
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
