--- a/data/index.html
+++ b/data/index.html
@@ -71,19 +71,6 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         transform: translateY(3px)
     }
 
-    .button2 {
-        background-color: green
-    }
-
-    .button2:hover {
-        background-color: darkgreen
-    }
-
-    .button2:active {
-        background-color: darkgreen;
-        transform: translateY(3px)
-    }
-
     /* toggle */
     .toggle {
         --width: 80px;
@@ -209,21 +196,25 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         text-align: center;
     }
 </style>
+
 <html>
 
 <head>
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
+
+    <!-- Import jquery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+    <!-- Import chart.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.2/chart.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <title>Esp32_oscilloscope</title>
 </head>
 
 <body>
 
+    <!-- Space for chart -->
     <div class="container mt-5">
         <div class="card">
             <div class="card-header" style="align-items: center;">BioSignal-Recorder</div>
@@ -235,6 +226,7 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         </div>
     </div>
 
+    <!-- On-Off toggle button -->
     <label class="toggle">
         <input type="checkbox" onclick="toggle(this)">
         <span class="slider"></span>
@@ -261,8 +253,7 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
     <script>
 
         function showOption() {
-
-            // Remove pre-existing options
+            // Remove pre-existing options whenever no. of channel is changed
             if ($(".select_list_gpio")[0]) {
                 $(".select_list_gpio").remove();
             }
@@ -277,35 +268,42 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
             rate_text = ["100 Hz", "200 Hz", "300 Hz", "400 Hz", "500 Hz", "1000 Hz", "4000 Hz", "5000 Hz"];
             rate_value = ["100", "200", "300", "400", "500", "1000", "4000", "5000"];
 
+            // Loop through no. of channels
             for (var i = 0; i < $("#channel_count").val(); i++) {
+
+                // Create a subparent, this will hold GPIO and sampling rate selector for each channel
                 var subparent = document.createElement('p');
 
+                // Create GPIO and sampling rate selector
                 var select_list_gpio = document.createElement("select");
                 select_list_gpio.setAttribute("class", "select_list_gpio");
                 var select_list_rate = document.createElement("select");
                 select_list_rate.setAttribute("class", "select_list_rate");
 
+                // For every GPIO and sampling rate selector add options according to previously initialised list
                 for (var j = 0; j < gpio_text.length; j++) {
                     option = document.createElement("option");
                     option.value = gpio_value[j];
                     option.text = gpio_text[j];
                     select_list_gpio.appendChild(option);
                 }
-
                 for (var j = 0; j < rate_text.length; j++) {
                     option = document.createElement("option");
                     option.value = rate_value[j];
                     option.text = rate_text[j];
                     select_list_rate.appendChild(option);
                 }
+
+                // Append selectors to subparent
                 subparent.appendChild(select_list_gpio);
                 subparent.appendChild(select_list_rate);
 
+                // Append subparent to main list of selectors
                 parent.appendChild(subparent);
             }
         }
 
-        // Start or stop oscilloscope whene toggled
+        // Start or stop oscilloscope when On-Off switch is toggled
         function toggle(checkbox) {
             if (checkbox.checked) {
                 startOscilloscope();
@@ -315,6 +313,8 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
             }
         }
 
+        /*********************************************************************************************************************************/
+        /************************************ Visual configuration for data shown on chart ***********************************************/
         var data = {
             labels: [0],
             datasets: [{
@@ -352,7 +352,6 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
             }]
         }
 
-        // config for chart
         var config = {
             type: 'line',
             data: data,
@@ -401,9 +400,13 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         Chart.defaults.font.size = 16;
         Chart.defaults.font.style = 'normal';
         Chart.defaults.backgroundColor = '#9BD0F5';
+
+        // Create chart on canvas defined in html using config declared above
         chart = new Chart(document.getElementById('oscilloscope'), config);
 
+        /**********************************************************************************************************************************/
 
+        // This stores websocket object when we start websocket connection
         var webSocket = null;
 
         // close websocket connection when toggle is switched off
@@ -417,10 +420,13 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
         // Initialise CSV file
         var csvFileData = 'Channel, Time, Analog, Packet No.\n';
 
-        // Send values of pin number and sampling rate through webSocket
+        /*  
+        Called when toggle is switched On.
+        This function is used to start websocket connection.
+        */
         function startOscilloscope() {
-            stopOscilloscope();
 
+            // Create array of selected GPIO numbers
             var pin = [];
             var i = 0;
             $(".select_list_gpio").each(function () {
@@ -428,14 +434,19 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                 i++;
             });
 
+            // Create array of selected sampling rate
             var rate = [];
             i = 0;
             $(".select_list_rate").each(function () {
                 rate[i] = $(this).val();
                 i++;
             });
+
+            // Start a new websocket connection
             webSocket = new WebSocket("ws://" + window.location.hostname + ":81/");
             webSocket.binaryType = 'arraybuffer';
+
+            // When connection is 'opened' GPIO and corresponding sampling rate should be transmitted.
             webSocket.addEventListener("open", (event) => {
                 for (var i = 0; i < $("#channel_count").val(); i++) {
                     msg = rate[i] + pin[i];
@@ -443,7 +454,11 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                 }
             })
 
+            // Store current time before starting chart
+            // we will use relative time as lable in chart
             start_t = Date.now();
+
+            // Whenever a packet is recieved through websocket following function is called
             webSocket.onmessage = function (event) {
 
                 // Store received data
@@ -451,8 +466,10 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                     ADC = new Uint16Array(event.data);
                 }
 
-                // Second last index of data recieved has Channel number and last index has packet number for given channel
+                // Last index of recieved packet has 'channel number'
                 channel_count = ADC[ADC.length - 1];
+
+                // Second last index of data recieved has 'packet number' for given channel
                 packet_count = ADC[ADC.length - 2];
 
                 // Add recieved data to dataset of chart
@@ -460,14 +477,15 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                     data.datasets[channel_count].data.unshift(ADC[i]);
                 }
 
-                // Remove old data if number of points on screen is greater than 1000
-                while (data.datasets[channel_count].data.length > 1000) {
+                // Remove old data if number of points on screen is greater than 250
+                while (data.datasets[channel_count].data.length > 250) {
                     data.datasets[channel_count].data.pop();
                 }
-                if (data.labels.length > 1000) {
+                if (data.labels.length > 250) {
                     data.labels.pop();
                 }
 
+                // Get current time, just before updating CSV and chart
                 current_t = Date.now();
                 time = parseInt(current_t) - parseInt(start_t)
                 data.labels.unshift(time);
@@ -476,7 +494,6 @@ This file is part of Esp32_oscilloscope project: https://github.com/BojanJurca/E
                 for (var i = 0; i < ADC.length - 2; i++) {
                     csvFileData += channel_count + "," + time + "," + ADC[i] + "," + packet_count + "\n";
                 }
-
             };
 
             // Refresh rate of 30 FPS
